# Aida64-Keys

./: Cargo.toml  README.md
.github/workflows/: Linux&Win.yml  MacOS  MacOS.yml  icon.icns  mac.yml  rust.yml  s.yml  test.yaml  test.yml  ubuntu.yml  windows.yml
aida64-keys-cli/: README.md
aida64-keys-gui/: Cargo.toml  README.md
aida64-keys-gui/src/: app.rs  main.rs
aida64-keys-lib/: Cargo.toml
aida64-keys-lib/src/: lib.rs
src/: main.rs
